style(accent buttons): remove float hover animation and update on-accent color for accessibility
Removed redundant float animation for clearer, less distracting hover effect. Changed on-accent text color to black to meet WCAG contrast guidelines and improve readability.

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
             <!-- Call-to-action + Toggler (Mobile) -->
             <div class="d-flex d-xl-none">
               <div class="custom-navbar__cta-wrapper mx-2">
-                <button class="custom-navbar__cta btn animation-float">My order <img class="ms-2" src="/images/shopping-cart.svg" alt="..." width="" height="13"></button>
+                <button class="custom-navbar__cta btn">My order <img class="ms-2" src="/images/shopping-cart.svg" alt="..." width="" height="13"></button>
               </div>
               <button class="custom-navbar__toggler navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#primaryMenu" aria-controls="primaryMenu" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -75,7 +75,7 @@
 
             <!-- Call-to-action (Desktop) -->
             <div class="custom-navbar__cta-wrapper d-none d-xl-block">
-              <button class="custom-navbar__cta btn animation-float">My order <img class="ms-2" src="/images/shopping-cart.svg" alt="..." width="" height="13"></button>
+              <button class="custom-navbar__cta btn">My order <img class="ms-2" src="/images/shopping-cart.svg" alt="..." width="" height="13"></button>
             </div>
 
           </div>
@@ -97,7 +97,7 @@
                 <div class="custom-carousel__container">
                   <div class="custom-carousel__preheading" data-aos="fade-up">1. Design and order your new kitchen online today</div>
                   <h1 class="custom-carousel__heading" data-aos="fade-up" data-aos-delay="200">Bespoke & made to measure handmade kitchen design</h1>
-                  <a href="." class="btn btn-accent text-on-accent animation-float" data-aos="fade-up" data-aos-delay="400">Order now</a>
+                  <a href="." class="btn btn-accent text-on-accent" data-aos="fade-up" data-aos-delay="400">Order now</a>
                 </div>
               </div>
               <div class="carousel-item position-relative">
@@ -105,7 +105,7 @@
                 <div class="custom-carousel__container">
                   <div class="custom-carousel__preheading">2. Design and order your new kitchen online today</div>
                   <h2 class="custom-carousel__heading">Bespoke & made to measure handmade kitchen design</h2>
-                  <a href="." class="btn btn-accent text-on-accent animation-float">Order now</a>
+                  <a href="." class="btn btn-accent text-on-accent">Order now</a>
                 </div>
               </div>
               <div class="carousel-item position-relative">
@@ -113,7 +113,7 @@
                 <div class="custom-carousel__container">
                   <div class="custom-carousel__preheading">3. Design and order your new kitchen online today</div>
                   <h2 class="custom-carousel__heading">Bespoke & made to measure handmade kitchen design</h2>
-                  <a href="." class="btn btn-accent text-on-accent animation-float">Order now</a>
+                  <a href="." class="btn btn-accent text-on-accent">Order now</a>
                 </div>
               </div>
             </div>
@@ -134,7 +134,7 @@
                   <div class="custom-about__preheading">Quality Craftmanship from build to delivery</div>
                   <h2 class="custom-about__heading">Discover the beauty of a handmade kitchen</h2>
                   <p class="custom-about__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi eget est sit amet sapien venenatis maximus vel in urna. Nam mauris arcu, feugiat in finibus vitae, sollicitudin id purus. Ut imperdiet, magna eu pharetra tincidunt, mauris purus ultrices.</p>
-                  <a href="." class="btn btn-accent text-on-accent animation-float">About us</a>
+                  <a href="." class="btn btn-accent text-on-accent">About us</a>
                 </div>
               </div>
             </div>
@@ -162,7 +162,7 @@
                 </div>
               </div>
             </div>
-            <a href="." class="custom-testimonials__button btn btn-accent text-on-accent animation-float">Frequently Asked Questions</a>
+            <a href="." class="custom-testimonials__button btn btn-accent text-on-accent">Frequently Asked Questions</a>
           </div>
         </section>
 
@@ -192,7 +192,7 @@
                 </a>
               </div>
             </div>
-            <a href="." class="custom-gallery__button btn btn-accent text-on-accent animation-float">View more</a>
+            <a href="." class="custom-gallery__button btn btn-accent text-on-accent">View more</a>
           </div>
         </section>
       </main>
