Optimize LCP: Set fetchpriority="high" on first hero slider image.

--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,7 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item  position-relative active">
-                <img src="/images/hero.jpg" class="custom-carousel__image d-block w-100" alt="...">
+                <img src="/images/hero.jpg" fetchpriority=high class="custom-carousel__image d-block w-100" alt="...">
                 <div class="custom-carousel__container">
                   <div class="custom-carousel__preheading" data-aos="fade-up">1. Design and order your new kitchen online today</div>
                   <h1 class="custom-carousel__heading" data-aos="fade-up" data-aos-delay="200">Bespoke & made to measure handmade kitchen design</h1>
