feat(images): add loading="lazy" attribute to improve performance

--- a/src/index.html
+++ b/src/index.html
@@ -126,7 +126,7 @@
             <div class="row">
               <div class="col-md-6">
                 <div class="position-relative h-100" data-aos="fade-right" data-aos-delay="200">
-                  <img class="custom-about__image" src="/images/about.jpg" alt="..." srcset="">
+                  <img class="custom-about__image" loading="lazy" src="/images/about.jpg" alt="..." srcset="">
                 </div>
               </div>
               <div class="col-md-6">
@@ -173,22 +173,22 @@
             <div class="row">
               <div class="col-6 col-sm-3" data-aos="fade-up">
                 <a data-src="/images/gallery-1@2x.jpg" class="custom-gallery__link" data-basiclightbox="gallery" data-caption="Lorem ipsum, dolor sit amet consectetur adipisicing elit.">
-                  <img src="/images/gallery-1.jpg" class="custom-gallery__image d-block w-100" alt="...">
+                  <img src="/images/gallery-1.jpg" loading="lazy" class="custom-gallery__image d-block w-100" alt="...">
                 </a>
               </div>
               <div class="col-6 col-sm-3" data-aos="fade-up">
                 <a data-src="/images/gallery-2@2x.jpg" class="custom-gallery__link" data-basiclightbox="gallery" data-caption="Lorem ipsum, dolor sit amet consectetur adipisicing elit.">
-                  <img src="/images/gallery-2.jpg" class="custom-gallery__image d-block w-100" alt="...">
+                  <img src="/images/gallery-2.jpg" loading="lazy" class="custom-gallery__image d-block w-100" alt="...">
                 </a>
               </div>
               <div class="col-6 col-sm-3" data-aos="fade-up">
                 <a data-src="/images/gallery-3@2x.jpg" class="custom-gallery__link" data-basiclightbox="gallery" data-caption="Lorem ipsum, dolor sit amet consectetur adipisicing elit.">
-                  <img src="/images/gallery-3.jpg" class="custom-gallery__image d-block w-100" alt="...">
+                  <img src="/images/gallery-3.jpg" loading="lazy" class="custom-gallery__image d-block w-100" alt="...">
                 </a>
               </div>
               <div class="col-6 col-sm-3" data-aos="fade-up">
                 <a data-src="/images/gallery-4@2x.jpg" class="custom-gallery__link" data-basiclightbox="gallery" data-caption="Lorem ipsum, dolor sit amet consectetur adipisicing elit.">
-                  <img src="/images/gallery-4.jpg" class="custom-gallery__image d-block w-100" alt="...">
+                  <img src="/images/gallery-4.jpg" loading="lazy" class="custom-gallery__image d-block w-100" alt="...">
                 </a>
               </div>
             </div>
@@ -200,7 +200,7 @@
       <footer class="custom-footer">
         <div class="container">
           <div class="custom-footer__logo-wrapper">
-            <a aria-label="Navigate to the homepage" class="custom-footer__logo" href="."><img src="/images/logo.svg" alt="..." height="33"></a>
+            <a aria-label="Navigate to the homepage" class="custom-footer__logo" href="."><img src="/images/logo.svg" loading="lazy" alt="..." height="33"></a>
           </div>
           <!-- Menu (Mobile) -->
           <div class="custom-footer__menu-mobile accordion accordion-flush" id="accordionFlushExample">
@@ -258,9 +258,9 @@
           <!-- Social (Mobile) -->
           <div class="custom-footer__social-mobile">
             <ul class="footer-social">
-              <li class="footer-social__item"><a aria-label="Facebook" href="." target="_blank" rel="noopener noreferrer"><img src="/images/facebook-rounded.svg" alt="..." width="40" height="40"></a></li>
-              <li class="footer-social__item"><a aria-label="Twitter" href="." target="_blank" rel="noopener noreferrer"><img src="/images/twitter-rounded.svg" alt="..." width="40" height="40"></a></li>
-              <li class="footer-social__item"><a aria-label="Instagram" href="." target="_blank" rel="noopener noreferrer"><img src="/images/instagram-rounded.svg" alt="..." width="40" height="40"></a></li>
+              <li class="footer-social__item"><a aria-label="Facebook" href="." target="_blank" rel="noopener noreferrer"><img src="/images/facebook-rounded.svg" loading="lazy" alt="..." width="40" height="40"></a></li>
+              <li class="footer-social__item"><a aria-label="Twitter" href="." target="_blank" rel="noopener noreferrer"><img src="/images/twitter-rounded.svg" loading="lazy" alt="..." width="40" height="40"></a></li>
+              <li class="footer-social__item"><a aria-label="Instagram" href="." target="_blank" rel="noopener noreferrer"><img src="/images/instagram-rounded.svg" loading="lazy" alt="..." width="40" height="40"></a></li>
             </ul>
           </div>
           <!-- Menu (Desktop) -->
@@ -294,9 +294,9 @@
             <div class="col-sm-12 col-md-3">
               <h3 class="custom-footer__heading custom-footer__heading_four">Follow</h3>
               <ul class="footer-social">
-                <li class="footer-social__item"><a aria-label="Facebook" href="." target="_blank" rel="noopener noreferrer"><img src="/images/facebook-rounded.svg" alt="..." width="40" height="40"></a></li>
-                <li class="footer-social__item"><a aria-label="Twitter" href="." target="_blank" rel="noopener noreferrer"><img src="/images/twitter-rounded.svg" alt="..." width="40" height="40"></a></li>
-                <li class="footer-social__item"><a aria-label="Instagram" href="." target="_blank" rel="noopener noreferrer"><img src="/images/instagram-rounded.svg" alt="..." width="40" height="40"></a></li>
+                <li class="footer-social__item"><a aria-label="Facebook" href="." target="_blank" rel="noopener noreferrer"><img src="/images/facebook-rounded.svg" loading="lazy" alt="..." width="40" height="40"></a></li>
+                <li class="footer-social__item"><a aria-label="Twitter" href="." target="_blank" rel="noopener noreferrer"><img src="/images/twitter-rounded.svg" loading="lazy" alt="..." width="40" height="40"></a></li>
+                <li class="footer-social__item"><a aria-label="Instagram" href="." target="_blank" rel="noopener noreferrer"><img src="/images/instagram-rounded.svg" loading="lazy" alt="..." width="40" height="40"></a></li>
               </ul>
             </div>
           </div>
