Use buttons instead of anchor tags for gallery images to improve semantics and modal accessibility; add shine hover effect to highlight interactivity.

--- a/src/index.html
+++ b/src/index.html
@@ -172,27 +172,27 @@
             <div class="custom-gallery__heading">Customer Gallery</div>
             <div class="row">
               <div class="col-6 col-sm-3" data-aos="fade-up">
-                <a data-src="/images/gallery-1@2x.jpg" class="custom-gallery__link" data-basiclightbox="gallery" data-caption="Lorem ipsum, dolor sit amet consectetur adipisicing elit.">
+                <button data-src="/images/gallery-1@2x.jpg" class="custom-gallery__button" data-basiclightbox="gallery" data-caption="Lorem ipsum, dolor sit amet consectetur adipisicing elit.">
                   <img src="/images/gallery-1.jpg" loading="lazy" class="custom-gallery__image d-block w-100" alt="...">
-                </a>
+                </button>
               </div>
               <div class="col-6 col-sm-3" data-aos="fade-up">
-                <a data-src="/images/gallery-2@2x.jpg" class="custom-gallery__link" data-basiclightbox="gallery" data-caption="Lorem ipsum, dolor sit amet consectetur adipisicing elit.">
+                <button data-src="/images/gallery-2@2x.jpg" class="custom-gallery__button" data-basiclightbox="gallery" data-caption="Lorem ipsum, dolor sit amet consectetur adipisicing elit.">
                   <img src="/images/gallery-2.jpg" loading="lazy" class="custom-gallery__image d-block w-100" alt="...">
-                </a>
+                </button>
               </div>
               <div class="col-6 col-sm-3" data-aos="fade-up">
-                <a data-src="/images/gallery-3@2x.jpg" class="custom-gallery__link" data-basiclightbox="gallery" data-caption="Lorem ipsum, dolor sit amet consectetur adipisicing elit.">
+                <button data-src="/images/gallery-3@2x.jpg" class="custom-gallery__button" data-basiclightbox="gallery" data-caption="Lorem ipsum, dolor sit amet consectetur adipisicing elit.">
                   <img src="/images/gallery-3.jpg" loading="lazy" class="custom-gallery__image d-block w-100" alt="...">
-                </a>
+                </button>
               </div>
               <div class="col-6 col-sm-3" data-aos="fade-up">
-                <a data-src="/images/gallery-4@2x.jpg" class="custom-gallery__link" data-basiclightbox="gallery" data-caption="Lorem ipsum, dolor sit amet consectetur adipisicing elit.">
+                <button data-src="/images/gallery-4@2x.jpg" class="custom-gallery__button" data-basiclightbox="gallery" data-caption="Lorem ipsum, dolor sit amet consectetur adipisicing elit.">
                   <img src="/images/gallery-4.jpg" loading="lazy" class="custom-gallery__image d-block w-100" alt="...">
-                </a>
+                </button>
               </div>
             </div>
-            <a href="." class="custom-gallery__button btn btn-accent text-on-accent">View more</a>
+            <a href="." class="custom-gallery__cta btn btn-accent text-on-accent">View more</a>
           </div>
         </section>
       </main>
