Revert to using public folder for images

--- a/src/index.html
+++ b/src/index.html
@@ -32,19 +32,19 @@
             <!-- Social -->
             <div class="custom-navbar__social-wrapper d-none d-xl-block">
               <ul class="header-social">
-                <li class="header-social__item"><a aria-label="Facebook" href="." target="_blank" rel="noopener noreferrer"><img src={facebookIcon} alt="..." width="10" height="16"></a></li>
-                <li class="header-social__item"><a aria-label="Twitter" href="." target="_blank" rel="noopener noreferrer"><img src={twitterIcon} alt="..." width="16" height="16"></a></li>
-                <li class="header-social__item"><a aria-label="Instagram" href="." target="_blank" rel="noopener noreferrer"><img src={instagramIcon} alt="..." width="14" height="16"></a></li>
+                <li class="header-social__item"><a aria-label="Facebook" href="." target="_blank" rel="noopener noreferrer"><img src="/images/facebook.svg" alt="..." width="10" height="16"></a></li>
+                <li class="header-social__item"><a aria-label="Twitter" href="." target="_blank" rel="noopener noreferrer"><img src="/images/twitter.svg" alt="..." width="16" height="16"></a></li>
+                <li class="header-social__item"><a aria-label="Instagram" href="." target="_blank" rel="noopener noreferrer"><img src="/images/instagram.svg" alt="..." width="14" height="16"></a></li>
               </ul>
             </div>
 
             <!-- Logo (Mobile) -->
-            <a aria-label="Navigate to the homepage" class="custom-nav__primary-link active d-xl-none" aria-current="page" href="."><img src={logo} alt="..." height="33"></a>
+            <a aria-label="Navigate to the homepage" class="custom-nav__primary-link active d-xl-none" aria-current="page" href="."><img src="/images/logo.svg" alt="..." height="33"></a>
 
             <!-- Call-to-action + Toggler (Mobile) -->
             <div class="d-flex d-xl-none">
               <div class="custom-navbar__cta-wrapper mx-2">
-                <button class="custom-navbar__cta btn">My order <img class="ms-2" src={shoppingCartIcon} alt="..." width="" height="13"></button>
+                <button class="custom-navbar__cta btn">My order <img class="ms-2" src="/images/shopping-cart.svg" alt="..." width="" height="13"></button>
               </div>
               <button class="custom-navbar__toggler navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#primaryMenu" aria-controls="primaryMenu" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -62,7 +62,7 @@
                   </ul>
                 </li>
                 <!-- Logo -->
-                <li style="flex-grow: 0;" class="custom-nav__primary-item custom-nav__primary-item_logo text-center d-none d-xl-block"><a aria-label="Navigate to the homepage" class="custom-nav__primary-link active" aria-current="page" href="#"><img src={logo} alt="..." height="33"></a></li>
+                <li style="flex-grow: 0;" class="custom-nav__primary-item custom-nav__primary-item_logo text-center d-none d-xl-block"><a aria-label="Navigate to the homepage" class="custom-nav__primary-link active" aria-current="page" href="#"><img src="/images/logo.svg" alt="..." height="33"></a></li>
                 <!-- Right menu -->
                 <li class="custom-nav__primary-item">
                   <ul class="align-items-center navbar-nav w-100 justify-content-start">
@@ -75,7 +75,7 @@
 
             <!-- Call-to-action (Desktop) -->
             <div class="custom-navbar__cta-wrapper d-none d-xl-block">
-              <button class="custom-navbar__cta btn">My order <img class="ms-2" src={shoppingCartIcon} alt="..." width="" height="13"></button>
+              <button class="custom-navbar__cta btn">My order <img class="ms-2" src="/images/shopping-cart.svg" alt="..." width="" height="13"></button>
             </div>
 
           </div>
@@ -93,7 +93,7 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item  position-relative active">
-                <img src={hero} fetchpriority=high class="custom-carousel__image d-block w-100" alt="...">
+                <img src="/images/hero.jpg" fetchpriority=high class="custom-carousel__image d-block w-100" alt="...">
                 <div class="custom-carousel__container">
                   <div class="custom-carousel__preheading" data-aos="fade-up">1. Design and order your new kitchen online today</div>
                   <h1 class="custom-carousel__heading" data-aos="fade-up" data-aos-delay="200">Bespoke & made to measure handmade kitchen design</h1>
@@ -101,7 +101,7 @@
                 </div>
               </div>
               <div class="carousel-item position-relative">
-                <img src={hero} class="custom-carousel__image d-block w-100" alt="...">
+                <img src="/images/hero.jpg" class="custom-carousel__image d-block w-100" alt="...">
                 <div class="custom-carousel__container">
                   <div class="custom-carousel__preheading">2. Design and order your new kitchen online today</div>
                   <h2 class="custom-carousel__heading">Bespoke & made to measure handmade kitchen design</h2>
@@ -109,7 +109,7 @@
                 </div>
               </div>
               <div class="carousel-item position-relative">
-                <img src={hero} class="custom-carousel__image d-block w-100" alt="...">
+                <img src="/images/hero.jpg" class="custom-carousel__image d-block w-100" alt="...">
                 <div class="custom-carousel__container">
                   <div class="custom-carousel__preheading">3. Design and order your new kitchen online today</div>
                   <h2 class="custom-carousel__heading">Bespoke & made to measure handmade kitchen design</h2>
@@ -126,7 +126,7 @@
             <div class="row">
               <div class="col-md-6">
                 <div class="position-relative h-100" data-aos="fade-right" data-aos-delay="200">
-                  <img class="custom-about__image" loading="lazy" src={about} alt="..." srcset="">
+                  <img class="custom-about__image" loading="lazy" src="/images/about.jpg" alt="..." srcset="">
                 </div>
               </div>
               <div class="col-md-6">
@@ -172,23 +172,23 @@
             <div class="custom-gallery__heading">Customer Gallery</div>
             <div class="row">
               <div class="col-6 col-sm-3" data-aos="fade-up">
-                <button data-src={gallery1full} class="custom-gallery__button" data-basiclightbox="gallery" data-caption="Lorem ipsum, dolor sit amet consectetur adipisicing elit.">
-                  <img src={gallery1} loading="lazy" class="custom-gallery__image d-block w-100" alt="...">
+                <button data-src="/images/gallery-1@2x.jpg" class="custom-gallery__button" data-basiclightbox="gallery" data-caption="Lorem ipsum, dolor sit amet consectetur adipisicing elit.">
+                  <img src="/images/gallery-1.jpg" loading="lazy" class="custom-gallery__image d-block w-100" alt="...">
                 </button>
               </div>
               <div class="col-6 col-sm-3" data-aos="fade-up">
-                <button data-src={gallery2full} class="custom-gallery__button" data-basiclightbox="gallery" data-caption="Lorem ipsum, dolor sit amet consectetur adipisicing elit.">
-                  <img src={gallery2} loading="lazy" class="custom-gallery__image d-block w-100" alt="...">
+                <button data-src="/images/gallery-2@2x.jpg" class="custom-gallery__button" data-basiclightbox="gallery" data-caption="Lorem ipsum, dolor sit amet consectetur adipisicing elit.">
+                  <img src="/images/gallery-2.jpg" loading="lazy" class="custom-gallery__image d-block w-100" alt="...">
                 </button>
               </div>
               <div class="col-6 col-sm-3" data-aos="fade-up">
-                <button data-src={gallery3full} class="custom-gallery__button" data-basiclightbox="gallery" data-caption="Lorem ipsum, dolor sit amet consectetur adipisicing elit.">
-                  <img src={gallery3} loading="lazy" class="custom-gallery__image d-block w-100" alt="...">
+                <button data-src="/images/gallery-3@2x.jpg" class="custom-gallery__button" data-basiclightbox="gallery" data-caption="Lorem ipsum, dolor sit amet consectetur adipisicing elit.">
+                  <img src="/images/gallery-3.jpg" loading="lazy" class="custom-gallery__image d-block w-100" alt="...">
                 </button>
               </div>
               <div class="col-6 col-sm-3" data-aos="fade-up">
-                <button data-src={gallery4full} class="custom-gallery__button" data-basiclightbox="gallery" data-caption="Lorem ipsum, dolor sit amet consectetur adipisicing elit.">
-                  <img src={gallery4} loading="lazy" class="custom-gallery__image d-block w-100" alt="...">
+                <button data-src="/images/gallery-4@2x.jpg" class="custom-gallery__button" data-basiclightbox="gallery" data-caption="Lorem ipsum, dolor sit amet consectetur adipisicing elit.">
+                  <img src="/images/gallery-4.jpg" loading="lazy" class="custom-gallery__image d-block w-100" alt="...">
                 </button>
               </div>
             </div>
@@ -200,7 +200,7 @@
       <footer class="custom-footer">
         <div class="container">
           <div class="custom-footer__logo-wrapper">
-            <a aria-label="Navigate to the homepage" class="custom-footer__logo" href="."><img src={logo} loading="lazy" alt="..." height="33"></a>
+            <a aria-label="Navigate to the homepage" class="custom-footer__logo" href="."><img src="/images/logo.svg" loading="lazy" alt="..." height="33"></a>
           </div>
           <!-- Menu (Mobile) -->
           <div class="custom-footer__menu-mobile accordion accordion-flush" id="accordionFlushExample">
@@ -258,9 +258,9 @@
           <!-- Social (Mobile) -->
           <div class="custom-footer__social-mobile">
             <ul class="footer-social">
-              <li class="footer-social__item"><a aria-label="Facebook" href="." target="_blank" rel="noopener noreferrer"><img src={facebookRoundedIcon} loading="lazy" alt="..." width="40" height="40"></a></li>
-              <li class="footer-social__item"><a aria-label="Twitter" href="." target="_blank" rel="noopener noreferrer"><img src={twitterRoundedIcon} loading="lazy" alt="..." width="40" height="40"></a></li>
-              <li class="footer-social__item"><a aria-label="Instagram" href="." target="_blank" rel="noopener noreferrer"><img src={instagramRoundedIcon} loading="lazy" alt="..." width="40" height="40"></a></li>
+              <li class="footer-social__item"><a aria-label="Facebook" href="." target="_blank" rel="noopener noreferrer"><img src="/images/facebook-rounded.svg" loading="lazy" alt="..." width="40" height="40"></a></li>
+              <li class="footer-social__item"><a aria-label="Twitter" href="." target="_blank" rel="noopener noreferrer"><img src="/images/twitter-rounded.svg" loading="lazy" alt="..." width="40" height="40"></a></li>
+              <li class="footer-social__item"><a aria-label="Instagram" href="." target="_blank" rel="noopener noreferrer"><img src="/images/instagram-rounded.svg" loading="lazy" alt="..." width="40" height="40"></a></li>
             </ul>
           </div>
           <!-- Menu (Desktop) -->
@@ -294,9 +294,9 @@
             <div class="col-sm-12 col-md-3">
               <h3 class="custom-footer__heading custom-footer__heading_four">Follow</h3>
               <ul class="footer-social">
-                <li class="footer-social__item"><a aria-label="Facebook" href="." target="_blank" rel="noopener noreferrer"><img src={facebookRoundedIcon} loading="lazy" alt="..." width="40" height="40"></a></li>
-                <li class="footer-social__item"><a aria-label="Twitter" href="." target="_blank" rel="noopener noreferrer"><img src={twitterRoundedIcon} loading="lazy" alt="..." width="40" height="40"></a></li>
-                <li class="footer-social__item"><a aria-label="Instagram" href="." target="_blank" rel="noopener noreferrer"><img src={instagramRoundedIcon} loading="lazy" alt="..." width="40" height="40"></a></li>
+                <li class="footer-social__item"><a aria-label="Facebook" href="." target="_blank" rel="noopener noreferrer"><img src="/images/facebook-rounded.svg" loading="lazy" alt="..." width="40" height="40"></a></li>
+                <li class="footer-social__item"><a aria-label="Twitter" href="." target="_blank" rel="noopener noreferrer"><img src="/images/twitter-rounded.svg" loading="lazy" alt="..." width="40" height="40"></a></li>
+                <li class="footer-social__item"><a aria-label="Instagram" href="." target="_blank" rel="noopener noreferrer"><img src="/images/instagram-rounded.svg" loading="lazy" alt="..." width="40" height="40"></a></li>
               </ul>
             </div>
           </div>
